charts/sa/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ontrack-v2-deployment
  labels:
    app: "ontrack"
    major: "2"
spec:
  selector:
    matchLabels:
      app: "ontrack"
      major: "2"
  template:
    metadata:
      labels:
        app: "ontrack"
        major: "2"
    spec:
      volumes:
        - name: ontrack-v2-storage
          persistentVolumeClaim:
            claimName: ontrack-v2-pvc
      containers:
        - name: ontrack
          image: "nemerosa/ontrack:2.33.5"
          volumeMounts:
            - mountPath: /var/ontrack/data
              name: ontrack-v2-storage
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              port: http
              path: /info
          readinessProbe:
            httpGet:
              port: http
              path: /info
