charts/sa/h2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ontrack-h2-deployment
  labels:
    app: "ontrack"
    major: "2"
    tier: "backend"
spec:
  selector:
    matchLabels:
      app: "ontrack"
      major: "2"
      tier: "backend"
  strategy:
      type: Recreate
  template:
    metadata:
      labels:
        app: "ontrack"
        major: "2"
        tier: "backend"
    spec:
      volumes:
        - name: ontrack-h2-storage
          persistentVolumeClaim:
            claimName: ontrack-h2-pvc
      containers:
        - name: h2
          image: "nemerosa/h2:0.1.0"
          volumeMounts:
            - mountPath: /usr/lib/h2
              name: ontrack-h2-storage
          ports:
            - containerPort: 9082
              name: tcp
              protocol: TCP
            - containerPort: 8082
              name: console
              protocol: TCP
