charts/sa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ontrack-v2-service
  labels:
    app: ontrack
    major: "2"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ontrack
    major: "2"
